# PSTForge

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD_PARTY_LICENSES.md
.agent/: EXECPLAN.md  PLANS.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  fuzz.yml  private-corpus.yml  release-build.yml  security.yml
crates/libpff-sys/: Cargo.toml  build.rs
crates/libpff-sys/src/: bindings.rs  catalog.rs  lib.rs
crates/pstforge-cli/: Cargo.toml  build.rs
crates/pstforge-cli/src/: lib.rs  main.rs
crates/pstforge-cli/tests/: external_corpus.rs  worker_boundary.rs
crates/pstforge-core/: Cargo.toml
crates/pstforge-core/src/: attachment_mime.rs  canonical.rs  catalog.rs  inspection.rs  lib.rs  packing.rs  recovery.rs  report.rs  source.rs  split.rs  worker.rs  writer_input.rs
crates/pstforge-job/: Cargo.toml
crates/pstforge-job/src/: lib.rs
crates/pstforge-pst/: Cargo.toml  README.md  UPSTREAM.md
crates/pstforge-pst/examples/: create_fidelity.rs  create_minimal.rs
crates/pstforge-pst/src/: crc.rs  lib.rs  writer.rs
crates/pstforge-pst/src/encode/: cyclic.rs  permute.rs
crates/pstforge-pst/src/ltp/: heap.rs  mod.rs  prop_context.rs  prop_type.rs  read_write.rs  table_context.rs
crates/pstforge-pst/src/messaging/: attachment.rs  folder.rs  message.rs  named_prop.rs  read_write.rs  search.rs  store.rs
crates/pstforge-pst/src/ndb/: block.rs  header.rs  mod.rs  node_id.rs  page.rs  read_write.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: ATTACHMENT_RECOVERY.md  PRODUCT_SPEC.md  ROADMAP.md  WRITER_CONFORMANCE.md  debian-changelog  debian-copyright  outline.md  pstforge.1
docs/schemas/: common.schema.json  info.schema.json  recover.schema.json  report.schema.json  split.schema.json  verify.schema.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: pst_reader.rs
tests/: corpus-manifest.example.toml  corpus-schema.json
tests/fixtures/json/: info.json  recover.json  report.json  split.json  verify.json
tools/: qualify-large-pst.sh
