[workspace]
members = [
    "crates/libpff-sys",
    "crates/pstforge-cli",
    "crates/pstforge-core",
    "crates/pstforge-job",
    "crates/pstforge-pst",
    "crates/xtask",
]
resolver = "2"

[workspace.package]
version = "0.4.2"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/calculatetech/PSTForge"

[workspace.dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
base64 = "0.22.1"
cfb = "0.14.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
compressed-rtf = "1.0.1"
libc = "0.2.172"
pkg-config = "0.3.32"
quick-xml = "0.41.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
rustix = { version = "1.1.4", features = ["fs", "process"] }
signal-hook = "0.3.18"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
zip = { version = "7.2.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[profile.release]
lto = "thin"
strip = "debuginfo"
