[package]
name = "pstforge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
pstforge-core = { path = "../pstforge-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
toml.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pstforge"
path = "src/main.rs"
