[package]
name = "pstforge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
pstforge-core = { path = "../pstforge-core" }
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
libpff-sys = { path = "../libpff-sys" }
pstforge-job = { path = "../pstforge-job" }
pstforge-pst = { path = "../pstforge-pst" }
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
zip.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "pstforge"
path = "src/main.rs"
