[package]
name = "pstforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
libc.workspace = true
libpff-sys = { path = "../libpff-sys" }
pstforge-job = { path = "../pstforge-job" }
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
