[package]
name = "pstforge-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
compressed-rtf.workspace = true
libc.workspace = true
libpff-sys = { path = "../libpff-sys" }
pstforge-job = { path = "../pstforge-job" }
pstforge-pst = { path = "../pstforge-pst" }
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true

[lib]
path = "src/lib.rs"
