[package]
name = "pstforge-job"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
libpff-sys = { path = "../libpff-sys" }
libc.workspace = true
rusqlite.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lib]
path = "src/lib.rs"
