[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
cfb.workspace = true
jsonschema.workspace = true
libpff-sys = { path = "../libpff-sys" }
pstforge-core = { path = "../pstforge-core" }
pstforge-pst = { path = "../pstforge-pst" }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
zip.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"
